# filter-chatgpt-annotator

./: .gitignore  CODEOWNERS  Dockerfile  MIGRATION.md  Makefile  README.md  RELEASE.md  docker-compose.local.yaml  docker-compose.yaml  env.example  pyproject.toml
.github/workflows/: ci.yaml  create-release.yaml
docs/: _PUBLISHING_PATH  _category_.json  adding_other_llms.md  architecture_diagram.txt  filter_usage_guide.md  output_contract.md  overview.md  usage_examples.md
docs/superpowers/specs/: 2026-05-25-langchain-migration-design.md
examples/: coco_format_example.json
filter_chatgpt_annotator/: filter.py
filter_chattag/: filter.py
prompts/: avocado_annotation_prompt.txt  avocado_annotation_prompt_bb.txt  chit_prompt_multilabel_class.txt  food_annotation_prompt.txt  food_annotation_prompt_bb.txt  industrial_quality_prompt.txt  medical_imaging_prompt.txt  pet_classification_prompt.txt  salad_prompt_multilabel.txt  salad_prompt_multilabel_class.txt  salad_prompt_multilabel_class_demo.txt  simple_salad_prompt.txt  simple_salad_prompt_bb.txt  simple_salad_prompt_bb_v2.txt  simple_salad_prompt_bb_v3.txt
schemas/: chattag_output.schema.json
scripts/: README.md  filter_food_annotation.py  filter_food_annotation_bb.py  filter_multilabel.py  filter_multilabel_bowl_demo.py  filter_multilabel_chit.py  filter_pet_classification.py  filter_simple_salad_bb.py  generate_multilabel_from_labels.py
tests/: test_filter_chatgpt_annotator.py  test_filter_chattag.py
view_dataset/: README.md  create_mosaic.py  show_bbox.py  show_labels.py  show_multilabel.py
