[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["filter_chattag"]  # Import package (renamed in v0.3.0)

[tool.setuptools.dynamic]
version = { file = "VERSION" }

[project]
# PyPI distribution name kept as filter_chatgpt_annotator so existing
# `pip install filter-chatgpt-annotator` keeps working and the release
# workflow's dry-run can resolve previously published versions.
# The IMPORT path is the new filter_chattag (see [tool.setuptools]
# above): `from filter_chattag.filter import FilterChatTag`.
name = "filter_chatgpt_annotator"
readme = "README.md"
requires-python = ">=3.10, <3.14"
license = "Apache-2.0"

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dynamic = ["version"]

dependencies = [
  "opencv-python>=4.8.0",
  "python-dotenv>=1.0.0",
  "pillow>=9.0.0",
  "pydantic>=2.0,<3.0",
  "langchain>=0.3,<0.4",
  "langchain-openai>=0.2,<0.3",
  "langchain-google-genai>=2.0,<3.0",
  "langchain-anthropic>=0.3,<0.4",
  "langchain-ollama>=0.2,<0.3",
  "openfilter[all]>=1.1.0,<2.0.0"
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "setuptools==72.2.0",
  "twine>=6.1.0,<7",
  "wheel==0.46.2",
  "pytest==8.3.4",
  "pytest-cov==6.0.0"
]

[[tool.uv.index]]
name = "openfilter"
url = "https://python.openfilter.io/simple"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
